--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -3,4 +3,104 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    color: rgb(222,208,196);
+    text-align: center;
+}
+
+.abox {
+    width: 300px;
+    height: auto;
+
+}
+
+.boxacoustic {
+    width: 300px;
+    height: auto;
+}
+
+.hbar {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+
+.vbar {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+
+}
+
+.center {
+    /* border: 5px solid; */
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* padding: 10px; */
+  }
+
+.upperleft {
+    /* border: 5px solid; */
+    position: relative;
+    top: 35%;
+    left: 35%;
+    transform: translate(-50%, -50%);
+    /* padding: 10px; */
+  }
+
+.box1 {
+    background-image: url('../img/1wotxt.jpg');
+    height: 1060px;
+}
+
+.box2 {
+    background-image: url('../img/2wotxt.jpg');
+    width: 1917px;
+    height: 1803px;
+}
+
+.box3 {
+    background-image: url('../img/3wotxt.jpg');
+  /* Set rules to fill background */
+  min-height: 1000px;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+}
+
+.box4 {
+    background-image: url('../img/4wotxt.jpg');
+  /* Set rules to fill background */
+  min-height: 1000px;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+}
+
+.box5 {
+    background-image: url('../img/5wotxt.jpg');
+  /* Set rules to fill background */
+  min-height: 1000px;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+}
+
+.box6 {
+    background-image: url('../img/6wotxt.jpg');
+  /* Set rules to fill background */
+  min-height: 1000px;
+  min-width: 1024px;
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
 }
