--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -44,66 +44,66 @@ body {
 .upperleft {
     /* border: 5px solid; */
     position: relative;
-    top: 35%;
-    left: 35%;
+    width: 30%;
+    top: 15%;
+    left: 32%;
     transform: translate(-50%, -50%);
     /* padding: 10px; */
+    text-align: justify;
   }
 
 .box1 {
-    height: 1080px;
+    height: 1060px;
     width: 100%;
     background: url('../img/1wotxt.jpg') no-repeat;
     background-position: 50% 50%;
-    background-size: 1920px 1200px;
+    background-size: 1400px 1060px;
 }
 
 .box2 {
-    background-image: url('../img/2wotxt.jpg');
-    width: 1917px;
-    height: 1803px;
+    background: url('../img/2wotxt.jpg')  no-repeat;
+    width: 100%;
+    height: 1317px;
+    background-position: 50% 50%;
+    background-size: 1400px 1317px;
 }
 
 .box3 {
-    background-image: url('../img/3wotxt.jpg');
-  /* Set rules to fill background */
-  min-height: 1000px;
-  min-width: 1024px;
+    background: url('../img/3wotxt.jpg')  no-repeat;
+    background-size: 1400px 1465px;
+    background-position: 50% 50%;
 	
   /* Set up proportionate scaling */
   width: 100%;
-  height: auto;
+  height: 1465px;
 }
 
 .box4 {
-    background-image: url('../img/4wotxt.jpg');
-  /* Set rules to fill background */
-  min-height: 1000px;
-  min-width: 1024px;
+    background: url('../img/4wotxt.jpg')  no-repeat;
+    background-size: 1400px 847px;
+    background-position: 50% 50%;
 	
   /* Set up proportionate scaling */
   width: 100%;
-  height: auto;
+  height: 847px;
 }
 
 .box5 {
-    background-image: url('../img/5wotxt.jpg');
-  /* Set rules to fill background */
-  min-height: 1000px;
-  min-width: 1024px;
+    background: url('../img/5wotxt.jpg')  no-repeat;;
+    background-size: 1400px 897px;
+    background-position: 50% 50%;
 	
-  /* Set up proportionate scaling */
-  width: 100%;
-  height: auto;
+    /* Set up proportionate scaling */
+    width: 100%;
+    height: 897px;
 }
 
 .box6 {
-    background-image: url('../img/6wotxt.jpg');
-  /* Set rules to fill background */
-  min-height: 1000px;
-  min-width: 1024px;
+    background: url('../img/6wotxt.jpg')  no-repeat;;
+    background-size: 1400px 382px;
+    background-position: 50% 50%;
 	
-  /* Set up proportionate scaling */
-  width: 100%;
-  height: auto;
+    /* Set up proportionate scaling */
+    width: 100%;
+    height: 382px;
 }
