--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -107,3 +107,18 @@ body {
     width: 100%;
     height: 382px;
 }
+
+.download-btn {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    /*rounder corners*/
+    border-radius: 3px;
+}
