--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -41,17 +41,8 @@ body {
     /* padding: 10px; */
   }
 
-.upperleft {
-    /* border: 5px solid; */
-    position: relative;
-    width: 30%;
-    top: 15%;
-    left: 32%;
-    transform: translate(-50%, -50%);
-    /* padding: 10px; */
-    text-align: justify;
-  }
 
+  
 .box1 {
     height: 1060px;
     width: 100%;
@@ -61,12 +52,47 @@ body {
 }
 
 .box2 {
-    background: url('../img/2wotxt.jpg')  no-repeat;
-    width: 100%;
-    height: 1317px;
-    background-position: 50% 50%;
-    background-size: 1400px 1317px;
+  background: none;
+  width: min(100%, 1100px);
+  margin: 0 auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* centers children horizontally */
+
+  gap: clamp(14px, 2.5vw, 28px);
+  padding: clamp(16px, 3vw, 32px);
 }
+
+/* centered text block */
+.box2-text {
+  max-width: 70ch;
+  text-align: center;
+}
+
+.box2-text h3 {
+  margin: 0 0 0.6em 0;
+  font-size: clamp(1.2rem, 1.25rem + 0.9vw, 1.9rem);
+  line-height: 1.15;
+}
+
+.box2-text p {
+  margin: 0 0 0.9em 0;
+  font-size: clamp(0.98rem, 0.95rem + 0.35vw, 1.1rem);
+  line-height: 1.55;
+}
+
+/* responsive image */
+.box2-image {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+
+  border-radius: 12px;
+}
+
+
 
 .box3 {
     background: url('../img/3wotxt.jpg')  no-repeat;
